--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "JacksonBates",
   "license": "MIT",
   "dependencies": {
+    "rimraf": "^2.6.2",
     "url-parse": "^1.1.9",
     "x-ray": "^2.3.2",
     "yazl": "^2.4.3"
