--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "JacksonBates",
   "license": "MIT",
   "dependencies": {
+    "clear": "0.0.1",
     "rimraf": "^2.6.2",
     "url-parse": "^1.1.9",
     "x-ray": "^2.3.2",
