adds wait package

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "is-html": "^1.1.0",
     "rimraf": "^2.6.2",
     "url-parse": "^1.1.9",
+    "wait": "^0.1.0",
     "x-ray": "^2.3.2",
     "yazl": "^2.4.3"
   }
