--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "flush": "rm *.zip",
+    "flush": "rm *.zip && cd public\/ && rm *.zip && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "JacksonBates",
